2014-04-08  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/60763
	* config/rs6000/vsx.md (vsx_xscvdpspn_scalar): Change input to DImode.
	* config/rs6000/rs6000.md (reload_vsx_from_gprsf): Update accordingly.
	Use gen_rtx_REG rather than simplify_gen_subreg for op0_di.

2014-04-08  Richard Biener  <rguenther@suse.de>

	PR middle-end/60706
	* tree-pretty-print.c (pp_double_int): For HWI32 hosts with
	a 64bit widest int print double-int similar to on HWI64 hosts.

2014-04-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60785
	* graphite-sese-to-poly.c (rewrite_phi_out_of_ssa): Treat
	default defs properly.

2014-04-08  Nathan Sidwell  <nathan@codesourcery.com>

	* doc/invoke (Wnon-virtual-dtor): Update to match implementation.
	(Weffc++): Likewise.

2014-04-07  Jan Hubicka  <hubcika@ucw.cz>

	* ipa-devirt.c (maybe_record_node): When node is not recorded,
	set completep to false rather than true.

2014-04-07  Douglas B Rupp  <rupp@adacore.com>

	PR target/60504
	* config/arm/arm.h (ASM_PREFERRED_EH_DATA_FORMAT): Expose from
	ARM_TARGET2_DWARF_FORMAT.

2014-04-07  Charles Baylis  <charles.baylis@linaro.org>

	PR target/60609
	* config/arm/arm.h (ASM_OUTPUT_CASE_END): Remove.
	(LABEL_ALIGN_AFTER_BARRIER): Align barriers which occur after
	ADDR_DIFF_VEC.

2014-04-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60766
	* tree-ssa-loop-ivopts.c (cand_value_at): Compute in an unsigned type.
	(may_eliminate_iv): Convert cand_value_at result to desired type.

2014-04-07  Jason Merrill  <jason@redhat.com>

	PR c++/60731
	* common.opt (-fno-gnu-unique): Add.
	* config/elfos.h (USE_GNU_UNIQUE_OBJECT): Check it.

2014-04-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* haifa-sched.c: Fix outdated function reference and minor
	grammar errors in introductory comment.

2014-04-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/60750
	* tree-ssa-operands.c (maybe_add_call_vops): Also add VDEFs
	for noreturn calls.