@@ -1,3 +1,7 @@
+2014-04-08  Pat Haugen  <pthaugen@us.ibm.com>
+
+	* gcc.target/powerpc/atomic_load_store-p8.c: New.
+
 2014-04-08  Jason Merrill  <jason@redhat.com>
 
 	* lib/gcc-dg.exp (dg-build-dso): Reset dg-do-what-default to
